added JSR-303 validation (experimental)

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,27 @@
     <name>subscribers</name>
     <url>http://maven.apache.org</url>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>com.subscribers.app.SubscribersApp</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <properties>
         <hibernate-validator.version>4.3.0.Final</hibernate-validator.version>
         <junit.version>4.10</junit.version>
